Simplify startup